import React from 'react';
import { shallow } from 'enzyme';
import { ExpensesSummary } from '../../components/ExpensesSummary';

test("Should correctly render ExpensesSummary with 1 expense", () => {
    const wrapper = shallow(<ExpensesSummary expensesCount={1} expensesTotal={235} />);
    expect(wrapper).toMatchSnapshot();
});


test("Should correctly render ExpensesSummary with multiple expenses", () => {

    const wrapper = shallow(<ExpensesSummary expensesCount={23} expensesTotal={2353556564} />);
    expect(wrapper).toMatchSnapshot();

});